kubernetes-manifests-asm/asm-examples/frontend-custom-100-0.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bank-gateway
spec:
  hosts:
  - "*"
  gateways:
  - bank-of-anthos-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        subset: v0-2-0
      weight: 0
    - destination:
        host: frontend
        subset: v0-2-0-custom
      weight: 100
