kubernetes-manifests-asm/asm-examples/frontend-http500-fault-injection.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bank-gateway
spec:
  hosts:
  - "*"
  gateways:
  - bank-of-anthos-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        subset: v0-2-0
        port:
          number: 80
      weight: 100
    fault:
      abort:
        httpStatus: 500
        percentage:
          value: 50
